--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "backpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "backpack-core": "^0.8.3",
-    "express": "^4.16.4",
-    "swagger": "^0.7.5"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4"
   }
 }
