--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ coverage
 .grunt
 
 # Bower dependency directory (https://bower.io/)
-bower_components
+bower_componentscd 
 
 # node-waf configuration
 .lock-wscript
